--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.41.5",
     "react-query": "^3.39.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
