--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
     "react-query": "^3.39.2",
-    "react-router": "^6.6.2",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
